<resources>
    <string-array name="colors_strings">
        <item name='Navy'>Navy</item>
        <item name='Darkblue'>Darkblue</item>
        <item name='Mediumblue'>Mediumblue</item>
        <item name='Blue'>Blue</item>
        <item name='Darkgreen'>Darkgreen</item>
        <item name='Green'>Green</item>
        <item name='Teal'>Teal</item>
        <item name='Darkcyan'>Darkcyan</item>
        <item name='Lime'>Lime</item>
        <item name='Cyan'>Cyan</item>
        <item name='Dodgerblue'>Dodgerblue</item>
        <item name='Seagreen'>Seagreen</item>
        <item name='Limegreen'>Limegreen</item>
        <item name='Turquoise'>Turquoise</item>
        <item name='Royalblue'>Royalblue</item>
        <item name='Steelblue'>Steelblue</item>
        <item name='Indigo'>Indigo</item>
        <item name='Cadetblue'>Cadetblue</item>
        <item name='Dimgray'>Dimgray</item>
        <item name='Slateblue'>Slateblue</item>
        <item name='Slategray'>Slategray</item>
        <item name='Lawngreen'>Lawngreen</item>
        <item name='Chartreuse'>Chartreuse</item>
        <item name='Aquamarine'>Aquamarine</item>
        <item name='Maroon'>Maroon</item>
        <item name='Purple'>Purple</item>
        <item name='Olive'>Olive</item>
        <item name='Gray'>Gray</item>
        <item name='Olivedrab'>Olivedrab</item>
        <item name='Skyblue'>Skyblue</item>
        <item name='Blueviolet'>Blueviolet</item>
        <item name='Darkred'>Darkred</item>
        <item name='Lightgreen'>Lightgreen</item>
        <item name='Darkviolet'>Darkviolet</item>
        <item name='Palegreen'>Palegreen</item>
        <item name='Darkorchid'>Darkorchid</item>
        <item name='Sienna'>Sienna</item>
        <item name='Brown'>Brown</item>
        <item name='Darkgray'>Darkgray</item>
        <item name='Lightblue'>Lightblue</item>
        <item name='Powderblue'>Powderblue</item>
        <item name='Firebrick'>Firebrick</item>
        <item name='Rosybrown'>Rosybrown</item>
        <item name='Darkkhaki'>Darkkhaki</item>
        <item name='Silver'>Silver</item>
        <item name='Indianred'>Indianred</item>
        <item name='Peru'>Peru</item>
        <item name='Chocolate'>Chocolate</item>
        <item name='Tan'>Tan</item>
        <item name='Lightgrey'>Lightgrey</item>
        <item name='Thistle'>Thistle</item>
        <item name='Orchid'>Orchid</item>
        <item name='Goldenrod'>Goldenrod</item>
        <item name='Crimson'>Crimson</item>
        <item name='Gainsboro'>Gainsboro</item>
        <item name='Plum'>Plum</item>
        <item name='Burlywood'>Burlywood</item>
        <item name='Darksalmon'>Darksalmon</item>
        <item name='Violet'>Violet</item>
        <item name='Lightcoral'>Lightcoral</item>
        <item name='Khaki'>Khaki</item>
        <item name='Sandybrown'>Sandybrown</item>
        <item name='Wheat'>Wheat</item>
        <item name='Salmon'>Salmon</item>
        <item name='Red'>Red</item>
        <item name='Magenta'>Magenta</item>
        <item name='Fuchsia'>Fuchsia</item>
        <item name='deeppink'>deeppink</item>
        <item name='Orangered'>Orangered</item>
        <item name='Tomato'>Tomato</item>
        <item name='Hotpink'>Hotpink</item>
        <item name='Coral'>Coral</item>
        <item name='Darkorange'>Darkorange</item>
        <item name='Orange'>Orange</item>
        <item name='Lightpink'>Lightpink</item>
        <item name='Pink'>Pink</item>
        <item name='Gold'>Gold</item>
        <item name='Yellow'>Yellow</item>
    </string-array>
    <string-array name="setting_languages">
        <item name="locale">Locale</item>
        <item name="tr">Türkçe</item>
        <item name="en">English</item>
    </string-array>

    <string name="app_name">Container Load Calculator</string>
    <string name="action_settings">Settings</string>

    <string name="dialog_button_cancel">Calcel</string>
    <string name="dialog_button_select">Select</string>
    <string name="dialog_button_add">Add</string>
    <string name="dialog_button_edit">Edit</string>
    <string name="dialog_button_delete">Delete</string>
    <!--App Dashboard Start-->
    <string name="dashboard_logo_description">Container Load Calculator</string>
    <string name="dashboard_cardview_title_calculation">Calculation</string>
    <string name="dashboard_cardview_title_container">Container</string>
    <string name="dashboard_cardview_title_production">Production</string>
    <string name="dashboard_cardview_title_order">Order</string>
    <string name="dashboard_cardview_title_setting">Setting</string>
    <!--App Dashboard End-->
    <!--App Calculation Start-->
    <string name="title_activity_calculation">Calculations</string>
    <string name="calculation_nav_button_prev">Back</string>
    <string name="calculation_nav_button_next">Next</string>
    <string name="calculation_nav_button_calculate">Calculate</string>

    <string name="calculation_container_button_select">Select Container</string>
    <string name="calculation_container_button_clear">Clear Container</string>
    <string name="calculation_container_title">Selected Container</string>
    <string name="calculation_container_title_select_dialog">Container Selection</string>
    <string name="calculation_container_title_add_dialog">Container Add</string>
    <string name="calculation_container_title_edit_dialog">Container Edit</string>

    <string name="calculation_container_title_measurement">Measurement</string>
    <string name="calculation_container_title_tolerance">Tolerance</string>

    <string name="calculation_container_definition_short_length">L</string>
    <string name="calculation_container_definition_short_width">W</string>
    <string name="calculation_container_definition_short_height">H</string>


    <string name="calculation_product_button_select">Select Products</string>
    <string name="calculation_product_button_clear">Clear Products</string>
    <string name="calculation_product_title">Product</string>

    <!--App Calculation End-->
    <!--Container-->
    <string name="container_title">Containers</string>
    <string name="title_activity_container">Containers</string>
    <string name="container_definition_name">Name</string>
    <string name="container_definition_color">Color</string>
    <string name="container_definition_length">Length (mm)</string>
    <string name="container_definition_width">Width (mm)</string>
    <string name="container_definition_height">Height (mm)</string>
    <string name="container_definition_tolerance_length">Length (mm)</string>
    <string name="container_definition_tolerance_width">Width (mm)</string>
    <string name="container_definition_tolerance_height">Height (mm)</string>
    <!--Container End-->
    <!--Product-->
    <string name="product_title">Products</string>
    <string name="title_activity_product">Products</string>

    <string name="product_dialog_title_select">Product Selection</string>
    <string name="product_dialog_title_add">Product Add</string>
    <string name="product_dialog_title_edit">Product Edit</string>
    <string name="product_definition_name">Name</string>
    <string name="product_definition_color">Color</string>
    <string name="product_definition_length">Length (mm)</string>
    <string name="product_definition_width">Width (mm)</string>
    <string name="product_definition_height">Height (mm)</string>
    <string name="product_definition_quantity">Quantity</string>

    <string name="product_definition_measurement">Measurement</string>
    <!--Product End-->
    <!--setting-->
    <string name="setting_title">Setting</string>
    <string name="title_activity_setting">Setting</string>
    <string name="setting_result_success">Save Setting Success</string>
    <string name="setting_button_save">Save Setting</string>
    <string name="setting_definition_lang">Language</string>
    <string name="setting_definition_api_url">API Url</string>
    <!--setting End-->

    <!--Error Message-->
    <string name="errormessage_invalid_request">Invalid request!</string>
    <string name="errormessage_not_selected_products">Please select at least one product!</string>
    <string name="errormessage_not_selected_container">Please select a container!</string>


    <string name="errormessage_cardview_not_found">Cardview Not found!</string>
    <string name="errormessage_unexpected_error">Unexpected error occurred</string>
    <string name="errormessage_add_error">Container insert failed!</string>
    <string name="errormessage_update_error">Container update failed!</string>
    <string name="errormessage_delete_error">Container delete failed!</string>


    <string name="errormessage_could_not_be_saved">could not be saved!</string>


    <string name="errormessage_container_select_container">Please select a container!</string>
    <string name="errormessage_container_selected_container_not_found">Selected container not found!</string>
    <string name="errormessage_not_found_db">Not found in the database!</string>
    <string name="errormessage_not_exists_db">Not exists in the database</string>

    <string name="errormessage_container_name_is_required">Name is required!</string>
    <string name="errormessage_container_length_is_required">Length is required!</string>
    <string name="errormessage_container_width_is_required">Width is required!</string>
    <string name="errormessage_container_height_is_required">Height is required!</string>

    <string name="errormessage_product_name_is_required">Name is required!</string>
    <string name="errormessage_product_length_is_required">Length is required!</string>
    <string name="errormessage_product_width_is_required">Width is required!</string>
    <string name="errormessage_product_height_is_required">Height is required!</string>
    <string name="errormessage_product_quantity_is_required">Quantity is required!</string>

    <string name="errormessage_API_permission_request">Required INTERNET permission!</string>
    <string name="errormessage_API_permission_request_requied">Required INTERNET permission for API Request!</string>

    <string name="errormessage_sw_error_title">Error!</string>
    <string name="errormessage_sw_warning_Title">Warning!</string>
    <string name="errormessage_sw_success_Title">Success!</string>
    <string name="errormessage_sw_loading_Title">Loading...</string>

    <string name="errormessage_volley_server_not_connected_to_internet">Server is not connected to internet.</string>
    <string name="errormessage_volley_device_not_connected_to_internet">Your device is not connected to internet.</string>
    <string name="errormessage_volley_bad_request">Bad Request.</string>
    <string name="errormessage_volley_parse_error">Parse Error (because of invalid json or xml).</string>
    <string name="errormessage_volley_out_of_memory">Out Of Memory Error.</string>
    <string name="errormessage_volley_authenticated_error">Server couldn\'t find the authenticated request.</string>
    <string name="errormessage_volley_server_not_responding">Server is not responding.</string>
    <string name="errormessage_volley_connection_time_out">Connection timeout error</string>
    <string name="errormessage_volley_unknown_error">An unknown error occurred.</string>
    <!--Error Message End-->


</resources>
