<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/calculation_container_margin"
    android:padding="@dimen/calculation_container_padding"
    tools:context="com.hasanural.Fragements.Calculation_container_Fragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cal_con_toolbox"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_select_container"
        android:layout_width="match_parent"
            android:background="@drawable/btn_select"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/calculation_container_button_margin"
        android:padding="@dimen/calculation_container_button_padding"
        android:layout_weight="1"
        android:text="@string/calculation_container_button_select"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/cal_con_toolbox"
        android:padding="@dimen/calculation_container_content_padding"
        android:visibility="visible"
        android:id="@+id/calculation_container_layout_empty"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/errormessage_container_select_container"
            android:textColor="@color/RedDark"
            android:padding="@dimen/calculation_container_content_padding"
            android:textSize="@dimen/calculation_container_title_text_size"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/calculation_container_layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_below="@id/calculation_container_layout_empty">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculation_container_title"
            android:textColor="@color/colorSecondaryText"
            android:padding="@dimen/calculation_container_content_padding"
            android:textSize="@dimen/calculation_container_title_text_size"
            />
        <TextView
            android:id="@+id/calculation_container_tw_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/calculation_container_content_padding"
            android:textAlignment="textEnd"
            android:textSize="@dimen/calculation_container_title_text_size"
            android:textColor="@color/colorSecondaryText"
            android:hint="@string/container_definition_name" />
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/calculation_container_content_padding"
            android:layout_weight="2"
            android:text="@string/calculation_container_title_measurement" />
        <TextView
            android:id="@+id/calculation_container_tw_measurement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textAlignment="textEnd"
            android:padding="@dimen/calculation_container_content_padding"
            />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/calculation_container_content_padding"
                android:layout_weight="2"
                android:text="@string/calculation_container_title_tolerance" />
            <TextView
                android:id="@+id/calculation_container_tw_tolerance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:padding="@dimen/calculation_container_content_padding"
                android:textAlignment="textEnd"
                android:hint="" />
        </LinearLayout>
        <TextView
            android:id="@+id/cal_con_tw_id"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            />
    </LinearLayout>
</RelativeLayout>