<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dialog_product_padding"
    android:layout_margin="@dimen/dialog_product_margin"
>
    <Button
        android:id="@+id/dialog_product_button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_button_cancel"
        android:background="@drawable/btn_close" />
    <TextView
        android:id="@+id/product_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_product_button_cancel"
        android:text="@string/product_dialog_title_add"
        android:textColor="@color/colorSecondaryText"
        android:padding="@dimen/product_dialog_title_padding"
        android:textSize="@dimen/product_dialog_title_text_size"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_dialog_title"
        android:id="@+id/product_dialog_layout_definition"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/defination_item_title_text_size"
                android:textColor="@color/colorSecondaryText"
                android:textAlignment="textEnd"
                android:text="@string/product_definition_name" />


            <EditText
                android:id="@+id/dialog_product_te_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_definition_name"
                android:inputType="text"
                android:padding="@dimen/edit_item_padding"
                android:singleLine="true"
                android:textColorHighlight="@color/colorSecondaryText"
                android:selectAllOnFocus="true"
                android:textAlignment="textEnd"
                android:textColor="@color/colorSecondaryText" >

            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/defination_item_title_text_size"
                android:textAlignment="textEnd"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/product_definition_color" />

            <Spinner
                android:id="@+id/dialog_product_sp_color"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="@dimen/edit_item_padding"
                android:textAlignment="textEnd"
                android:textColorHighlight="@color/colorSecondaryText" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_dialog_layout_definition"
        android:id="@+id/product_dialog_layout_measurement"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/defination_item_title_text_size"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/product_definition_length" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/defination_item_title_text_size"
                android:textAlignment="textEnd"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/product_definition_width" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/defination_item_title_text_size"
                android:textAlignment="textEnd"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/product_definition_height" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/dialog_product_te_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/product_definition_length"
                android:inputType="number"
                android:padding="@dimen/edit_item_padding"
                android:textColorHighlight="@color/colorSecondaryText"
                android:singleLine="true"
                android:selectAllOnFocus="true"
                android:textAlignment="textEnd"
                android:textColor="@color/colorSecondaryText" />
            <EditText
                android:id="@+id/dialog_product_te_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/product_definition_width"
                android:inputType="number"
                android:padding="@dimen/edit_item_padding"
                android:textColorHighlight="@color/colorSecondaryText"
                android:singleLine="true"
                android:selectAllOnFocus="true"
                android:textAlignment="textEnd"
                android:textColor="@color/colorSecondaryText" />
            <EditText
                android:id="@+id/dialog_product_te_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/product_definition_height"
                android:textColorHighlight="@color/colorSecondaryText"
                android:inputType="number"
                android:padding="@dimen/edit_item_padding"
                android:selectAllOnFocus="true"
                android:textAlignment="textEnd"
                android:textColor="@color/colorSecondaryText" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/dialog_product_tw_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_dialog_layout_measurement"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_product_button_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_edit"
            android:padding="10dp"
            android:text="@string/dialog_button_edit" />

        <Button
            android:id="@+id/dialog_product_button_delete"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_delete"
            android:padding="10dp"
            android:text="@string/dialog_button_delete"
            android:textColor="@color/RedDark"
            android:textSize="12sp" />

    </LinearLayout>
</RelativeLayout>